# Generative-Artificial-Intelligence

./: .gitignore  README.md
HW1/: README.md  main.ipynb  main.py  requirements.txt
HW2/: .gitignore  111511157.json  111511157.py  HW2_instructions.md  README.md  ablation_study.py  pyproject.toml  score_public.py
HW2/datasets/: private_dataset.json  public_dataset.json  sample_submission.json
HW2/submitted_file/: cor_50_evi_0.2798.json  cor_55_evi_0.2836.json  cor_59_evi_0.3233.json  cor_60_evi_0.2804.json  cor_62_evi_0.3435.json
Hallucination-Type-Classification-in-Peer-Reviews/: .gitignore  README.md  inference.py  main.ipynb  parse.py  requirements.txt  train.py
genai-research-qa-agent/: Dockerfile  demo.txt  genai_research_qa_agent_deployment_notes.md
genai-research-qa-agent/app/: main.py
genai-research-qa-agent/app/static/: index.html
genai-research-qa-agent/loptop_demo/: demo_server.py  main.py  requirements.txt
genai-research-qa-agent/loptop_demo/demo_static/: index.html
genai-research-qa-agent/scripts/: deploy_cloud.sh  run_cloud_demo.sh  run_local_demo.sh
