[project]
name = "hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.115.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "nltk>=3.9.4",
    "openai>=2.30.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "rouge-score>=0.1.2",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.34.0",
]
